// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert tab dynamically 1`] = `
<div class="ghb-tabs ghb-tabs--line">
  <div class="ghb-tabs__wrap">
    <div role="tablist" class="ghb-tabs__nav ghb-tabs__nav--line">
      <div role="tab" class="ghb-tab"><span class="ghb-tab__text ghb-tab__text--ellipsis">1</span></div>
      <div role="tab" aria-selected="true" class="ghb-tab ghb-tab--active"><span class="ghb-tab__text ghb-tab__text--ellipsis">2</span></div>
      <div role="tab" class="ghb-tab"><span class="ghb-tab__text ghb-tab__text--ellipsis">3</span></div>
      <div class="ghb-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="ghb-tabs__content">
    <div role="tabpanel" class="ghb-tab__pane" style="display: none;">
      <!---->
    </div>
    <div>
      <div role="tabpanel" class="ghb-tab__pane">2</div>
    </div>
    <div role="tabpanel" class="ghb-tab__pane" style="display: none;">3</div>
  </div>
</div>
`;

exports[`insert tab with child component 1`] = `
<div class="ghb-tabs ghb-tabs--line">
  <div class="ghb-tabs__wrap">
    <div role="tablist" class="ghb-tabs__nav ghb-tabs__nav--line">
      <div role="tab" aria-selected="true" class="ghb-tab ghb-tab--active"><span class="ghb-tab__text ghb-tab__text--ellipsis">1</span></div>
      <div role="tab" class="ghb-tab"><span class="ghb-tab__text ghb-tab__text--ellipsis">2</span></div>
      <div role="tab" class="ghb-tab"><span class="ghb-tab__text ghb-tab__text--ellipsis">3</span></div>
      <div class="ghb-tabs__line"></div>
    </div>
  </div>
  <div class="ghb-tabs__content">
    <div role="tabpanel" class="ghb-tab__pane">1</div>
    <div role="tabpanel" class="ghb-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="ghb-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`insert tab with name dynamically 1`] = `
<div class="ghb-tabs ghb-tabs--line">
  <div class="ghb-tabs__wrap">
    <div role="tablist" class="ghb-tabs__nav ghb-tabs__nav--line">
      <div role="tab" class="ghb-tab"><span class="ghb-tab__text ghb-tab__text--ellipsis">1</span></div>
      <div role="tab" aria-selected="true" class="ghb-tab ghb-tab--active"><span class="ghb-tab__text ghb-tab__text--ellipsis">2</span></div>
      <div class="ghb-tabs__line" style="transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="ghb-tabs__content">
    <div role="tabpanel" class="ghb-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="ghb-tab__pane" style="">1</div>
  </div>
</div>
`;
